Updated JVM GC options.